--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ts-project",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.4.8",
     "typescript": "^5.1.6"
   }
 }
